<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        android:title="@string/action_search_note_text"
        app:showAsAction="always"
        android:icon="@android:drawable/ic_menu_search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"/>

    <item
        android:id="@+id/action_close"
        android:title="@string/action_close_note_text"
        android:icon="@drawable/close_note"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_save"
        android:title="@string/action_save_note_text"
        android:icon="@drawable/save_note"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_filter"
        android:title="@string/action_filter_output_note_text"
        android:icon="@drawable/filter_notes"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_delete"
        android:title="@string/action_delete_note_text"
        android:icon="@drawable/delete_note"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_show_card"
        android:title="@string/action_show_card_note_text"
        android:icon="@drawable/card_note"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_send"
        android:title="@string/action_send_note_text"
        android:icon="@drawable/send_note"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_add_link"
        android:title="@string/action_add_link_note_text"
        android:icon="@drawable/add_link_note"
        app:showAsAction="never"/>
</menu>