<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:background="@color/background_text_color"
    android:orientation="vertical">

    <TextView
        android:id="@+id/card_note_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/card_edit_text_margin"
        android:text="@string/message_text"
        android:textColor="@color/gray_text"
        android:textSize="@dimen/card_edit_text_size"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/card_edit_text_margin"
            android:text="@string/card_edit_field_name_title_text"
            android:textColor="@color/gray_text"
            android:textSize="@dimen/card_edit_text_size"/>

        <EditText
            android:id="@+id/card_name_note_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:cursorVisible="true"
            android:ems="8"
            android:inputType="text"
            android:text="@string/empty_text"
            android:textColor="@color/gray_text"
            android:textSize="@dimen/card_edit_text_size"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/card_edit_text_margin"
            android:text="@string/card_edit_field_description_title_text"
            android:textColor="@color/gray_text"
            android:textSize="@dimen/card_edit_text_size"/>

        <EditText
            android:id="@+id/card_description_note_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:cursorVisible="true"
            android:ems="10"
            android:inputType="text"
            android:text="@string/empty_text"
            android:textColor="@color/gray_text"
            android:textSize="@dimen/card_edit_text_size"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/card_edit_field_data_title_text"
            android:textColor="@color/gray_text"
            android:textSize="@dimen/card_edit_text_size"/>

        <DatePicker
            android:id="@+id/inputDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:calendarViewShown="false"
            android:datePickerMode="spinner"
            android:textColor="@color/gray_text" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/card_edit_buttons_margin"
            android:backgroundTint="@color/background_list_color"
            android:text="@string/cancel"
            android:textColor="@color/gray_text"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/card_edit_buttons_margin"
            android:backgroundTint="@color/background_list_color"
            android:text="@string/card_note_edit_ok"
            android:textColor="@color/gray_text"/>
    </LinearLayout>
</LinearLayout>